* Add an optional argument to Wt::ActiveItemModel.
You can pass a list of just the columns you want to display:

  model = Wt::ActiveItemModel.new(products, ['title', 'price'])

Or a hash of label and column names:

  model = Wt::ActiveItemModel.new(products, {'title' => 'My Title', 
                                             'price' = 'Price'})

2009-04-06 Richard Dale  <richard.j.dale@gmail.com>
* Added inspect() and pretty_print() methods to the WModelIndex class
* Fix the WAbstractItemModel#createIndex method so that it works with Ruby 
instances as the third argument
* Add two class to support using ActiveRecord with the Wt::Ruby mvc classes
such as Wt::WTreeView and Wt::Ext::TableView

2009-04-03 Richard Dale  <richard.j.dale@gmail.com>
* When the Ruby runtime starts it sets up signal handlers for all signals,
so that they can be handled with Signal#trap. However, that was disabling
the default behaviour of SIGINT, and control C would no longer terminate a
Wt::Ruby program the way it would the C++ equivalent. So reenable the default
behaviour for SIGINT and make the ruby program quit.

2009-04-01 Richard Dale  <richard.j.dale@gmail.com>
* Improved the INSTALL instructions
* WMenu#addItem wasn't returning the newly created WMenuItem
* Added the wt-homepage example to the Wt 3.x examples

2009-03-30 Richard Dale  <richard.j.dale@gmail.com>
* Raised the Wt::Ruby version number to 0.9.1 for the first release
* Recommend either Wt 2.2.3 or Wt 2.99.0 in the INSTALL instructions

2009-03-27 Richard Dale  <richard.j.dale@gmail.com>
* Special case the marshalling for WFlags types used in virtual methods.
* Change the WT_VERSION check comparison to use 0x02630000 because hex 63 
corresponds to the 99 in 2.99.0.

2009-03-26 Richard Dale  <richard.j.dale@gmail.com>
* Fix the marshalling for the std::vector<unsigned char> type
* Strip WFlags<> templates and leave the underlying enum for return types

2009-03-25 Richard Dale  <richard.j.dale@gmail.com>